cha-pre-live-flux2/cha-eks-5a/namespaces/actapp-integration/namespace-actapp-integration.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actapp-integration
  labels:
    name: actapp-integration
