cha-pre-live-flux2/cha-eks-5a/namespaces/actapp-integration/network-policy-defaults.yaml
---

#########################################
## deny all ingress and egress traffic ##
#########################################

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: actapp-integration
spec:
  podSelector: {}
  ingress: []
  egress: []

---

#########
## DNS ##
#########

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-dns
  namespace: actapp-integration
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---

################
## monitoring ##
################

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-monitoring
  namespace: actapp-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: monitoring
---

###########################
## allow internet egress ##
###########################

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-internet-egress
  namespace: actapp-integration
spec:
  podSelector:
    matchLabels:
      require-internet-egress: "true"
  egress:
  - ports:
    - port: 443
      protocol: TCP
